2006-05-27  Karl Berry  <karl@gnu.org>

	* texi2dvi (IFS): initialize, since otherwise when we save/restore
	it may end up being set-but-empty, which may disable splitting.
	From Ralf W.

2006-05-20  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_makeinfo): use $TEX instead of hardwiring
	tex, to maybe avoid running into some
	misconfigured TeX installations, resulting in
	 ---! /var/lib/texmf/web2c/etex.fmt was written by pdfetex
	 (Fatal format file error; I'm stymied)
	Original report from Ralf Wildenhues, 12 May 2006 11:19:13 +0200.

2006-05-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* util/gendocs.sh: quoting, url fixes.

2006-05-08  Karl Berry  <karl@gnu.org>

	* autogen.sh: new name for bootstrap, and improve msg.  From Bruno
	via hello.

2006-05-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\dopdfimage): width and height args might have
	whitespace.  Report from Bob Chassell.

2006-05-05  Karl Berry  <karl@gnu.org>

	* texinfo.tex (\definetextfonsizexi, \definetextfonsizex): new cmds.
	(\fonttextsize): new user-level command @fonttextsize to change
	text font size.  (To be used for the next Emacs edition.)
	* makeinfo/cmds.c (cm_fonttextsize): new fn.
	(command_table): include it.
	* NEWS, doc/texinfo.txi (Fonts): document it.

2006-05-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Reporting Bugs): wording to match hello.

2006-04-26  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (TXI_XLATE): add txi-ru.tex and txi-uk.tex,
	from Sergey Poznyakoff.
	* doc/txi-ru.tex, doc/txi-uk.tex: new files.

2006-04-13  Karl Berry  <karl@gnu.org>

	* makeinfo/insertion.c (end_insertion): kill_self_indent(-1) to
	remove all indentation.  From Brian Gough, 11 Apr 2006 16:42:29 +0100.

2006-04-11  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (GNU Sample Texts): GFDL is version 1.2 now.
	Report from Claudio.

2006-03-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Xref Command Expansion): use U+2605 for